[package]
name = "tramp"
version = "0.3.0"
authors = ["Bruno Corrêa Zimmermann <brunoczim@gmail.com>"]
description = "Trampoline for recursive functions, with support for mutual recursion"
repository = "https://gitlab.com/bzim/trampoline-rs/"
keywords = ["trampoline", "recursion", "functional", "become"]
categories = ["algorithms", "rust-patterns"]
license = "MIT"
